update init docs

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -70,7 +70,18 @@
 \tableofcontents
 \setcounter{page}{3}
 	
+\chapter*{Введение}
+	
 \chapter{Аналитическая часть}
+
+
+
+\chapter{Конструкторская часть}
+
+
+
+\chapter{Технологическая часть}
+
 
 	
 \end{document}
