--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{report}
+\documentclass[a4paper,14pt]{extreport}
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
 \usepackage{listings}
@@ -51,7 +51,7 @@
 	basicstyle=\ttfamily\small,
 }
 
-\usepackage[left=2cm,right=2cm, top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
+\usepackage[left=3cm,right=1cm, top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 % Для измененных титулов глав:
 \usepackage{titlesec, blindtext, color} % подключаем нужные пакеты
 \definecolor{gray75}{gray}{0.75} % определяем цвет
@@ -69,8 +69,16 @@
 \renewcommand{\contentsname}{Содержание}
 \tableofcontents
 \setcounter{page}{3}
-	
+
+
 \chapter*{Введение}
+\addcontentsline{toc}{chapter}{Введение}
+
+Методы прогнозирования многообразны, как и объекты, прогнозированием которых занимается человек. Ему всегда было интересно узнать будущее -- свое, своих близких, государства, экономики, предугадать погоду, определить как изменятся в ближайшее время курсы валют и т.п.
+
+Но прогнозировать ситуацию важно не только из-за того, что это интересно, но и потому, что от предвидения будущего зависят действия человека. Если прогнозируется скачок цен на какой-то товар, то можно заранее закупить его. Фактически, можно сказать, что жизнь современного человека невозможно себе представить без прогнозирования
+
+Прогноз -- это результат индуктивного вывода, когда по характеру ограниченного множества значений показателей или взаимосвязи факторов делается вывод о том, что и остальные, еще не наблюдаемые значения этих показателей или взаимосвязи будут обладать аналогичными свойствами \cite{hse_pred}.
 	
 \chapter{Аналитическая часть}
 
@@ -83,5 +91,17 @@
 \chapter{Технологическая часть}
 
 
+
+\chapter*{Заключение}
+\addcontentsline{toc}{chapter}{Заключение}
+
+
+\chapter*{Список литературы}
+\addcontentsline{toc}{chapter}{Список литературы}
+
+\begin{thebibliography}{3}
+	\bibitem{hse_pred} Методы и модели социально-экономического прогнозирования : учебник и практикум для академического бакалавриата. В 2-х т. Т. 1. Теория и методология прогнозирования / И. С. Светуньков, С. Г. Светуньков. — М. : Издательство Юрайт, 2014. — 351 с. — Серия : Бакалавр. Академический курс.
+	
+\end{thebibliography}
 	
 \end{document}
