--- a/docs/main.tex
+++ b/docs/main.tex
@@ -74,23 +74,51 @@
 \chapter*{Введение}
 \addcontentsline{toc}{chapter}{Введение}
 
-Методы прогнозирования многообразны, как и объекты, прогнозированием которых занимается человек. Ему всегда было интересно узнать будущее -- свое, своих близких, государства, экономики, предугадать погоду, определить как изменятся в ближайшее время курсы валют и т.п.
+Методы прогнозирования многообразны, как и объекты, прогнозированием которых занимается человек. Ему всегда было интересно узнать будущее -- свое, своих близких, государства, экономики, предугадать погоду, определить как изменятся в ближайшее время курсы валют и т. п.
 
-Но прогнозировать ситуацию важно не только из-за того, что это интересно, но и потому, что от предвидения будущего зависят действия человека. Если прогнозируется скачок цен на какой-то товар, то можно заранее закупить его. Фактически, можно сказать, что жизнь современного человека невозможно себе представить без прогнозирования
+Но прогнозировать ситуацию важно не только из-за того, что это интересно, но и потому, что от предвидения будущего зависят действия человека. Если прогнозируется скачок цен на какой-то товар, то можно заранее закупить его. Можно сказать, что жизнь современного человека невозможно себе представить без прогнозирования.
 
 Прогноз -- это результат индуктивного вывода, когда по характеру ограниченного множества значений показателей или взаимосвязи факторов делается вывод о том, что и остальные, еще не наблюдаемые значения этих показателей или взаимосвязи будут обладать аналогичными свойствами \cite{hse_pred}.
+
+В мировой экономической науке накоплен и апробирован значительный арсенал методов прогнозирования, который дает возможность решать комплекс задач по обоснованию решений в различных областях \cite{bel_prog}.
+
+Задача прогнозирования цен на потребительские товары актуальна для различных типов пользователей: во-первых, это конечные покупатели, которые принимают решение о покупке того или иного товара; прогноз цены может повлиять не только на выбор момента покупки, но и на сам факт покупки товара как таковой; во-вторых, это владельцы магазинов (необязательно онлайн), которые планируют закупки и ассортимент товаров; в-третьих, маркетологи, формирующие аналитику изменения рынка тех или иных товаров \cite{met_pred_online}.
+
+Цель работы -- реализовать программное обеспечение для хранения, редактирования и удаления информации о покупателях, магазинах, ассортименте товаров в магазинах и истории цен товаров в них, а также прогнозирования цен на товары в магазинах посредством построения линии тренда на основе истории
+цен.
+
+Таким образом, необходимо решить следующие задачи:
+
+\begin{itemize}
+	\item проанализировать варианты представления данных и выбрать из них подходящий для решения задачи;
+	\item проанализировать системы управления базами данных и выбрать подходящую систему для хранения данных;
+	\item проанализировать методы построения линии тренда и выбрать подходящий метод для прогнозирования цен;
+	\item спроектировать базу данных, описать её сущности и связи;
+	\item реализовать интерфейс для работы с базой данных;
+	\item реализовать возможность построения линии тренда для прогнозирования цен на товары.
+\end{itemize}
 	
 \chapter{Аналитическая часть}
 
 
+\section{Анализ вариантов представления данных}
+
+
+\section{Анализ СУБД}
+
+
+\section{Анализ методов построения линии тренда}
+
+
+\section*{Вывод}
 
 \chapter{Конструкторская часть}
 
-
+\section*{Вывод}
 
 \chapter{Технологическая часть}
 
-
+\section*{Вывод}
 
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
@@ -102,6 +130,9 @@
 \begin{thebibliography}{3}
 	\bibitem{hse_pred} Методы и модели социально-экономического прогнозирования : учебник и практикум для академического бакалавриата. В 2-х т. Т. 1. Теория и методология прогнозирования / И. С. Светуньков, С. Г. Светуньков. — М. : Издательство Юрайт, 2014. — 351 с. — Серия : Бакалавр. Академический курс.
 	
+	\bibitem{bel_prog} Касперович С.А. Прогнозирование и планирование экономики : курс лекций для студентов специальностей 1-25 01 07 «Экономика и управление предприятием», 1-25 01 08 «Бухгалтерский учет, анализ и аудит», 1-26 02 02 «Менеджмент», 1-26 02 03 «Маркетинг» / С. А. Касперович. - Минск. : БГТУ, 2007. - 172 с. 
+	
+	\bibitem{met_pred_online} МЕТОДИКА ПРОГНОЗИРОВАНИЯ ЦЕН НА ТОВАРЫ В ИНТЕРНЕТ-МАГАЗИНАХ
 \end{thebibliography}
 	
 \end{document}
