update analit and list of literature

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -197,7 +197,7 @@
 			
 			\hline
 			
-			Покупатель & Просмотр информации о магазинах, их ассортименте товаров и их актуальной стоимости \\
+			Пользователь & Просмотр информации о магазинах, их ассортименте товаров и их актуальной стоимости \\
 			
 			\hline
 			
@@ -205,7 +205,7 @@
 			
 			\hline
 			
-			Администратор & Просмотр, добавление и удаление информации о магазинах, их ассортименте товаров и их истории цен. Возможность прогнозирования цены на товар \\
+			Администратор & Просмотр, добавление и удаление информации о магазинах, их ассортименте товаров и их истории цен, покупателях. Возможность прогнозирования цены на товар \\
 			
 			\hline
 		\end{tabular}
@@ -426,6 +426,8 @@ DB2 представляет собой СУБД, которая имеет во
 
 \chapter{Конструкторский раздел}
 
+\section{title}
+
 \section*{Вывод к конструкторскому разделу}
 \addcontentsline{toc}{section}{Вывод к конструкторскому разделу}
 
@@ -447,37 +449,37 @@ DB2 представляет собой СУБД, которая имеет во
 	
 	\bibitem{bel_prog} Касперович С.А. Прогнозирование и планирование экономики : курс лекций для студентов специальностей 1-25 01 07 «Экономика и управление предприятием», 1-25 01 08 «Бухгалтерский учет, анализ и аудит», 1-26 02 02 «Менеджмент», 1-26 02 03 «Маркетинг» / С. А. Касперович. - Минск. : БГТУ, 2007. - 172 с. 
 	
-	\bibitem{met_pred_online} МЕТОДИКА ПРОГНОЗИРОВАНИЯ ЦЕН НА ТОВАРЫ В ИНТЕРНЕТ-МАГАЗИНАХ
+	\bibitem{met_pred_online} К. В. Богданов. Методика прогнозирования цен на товары в интернет-магазинах [Электронный ресурс]. -- Режим доступа: https://cyberleninka.ru/article/n/metodika-prognozirovaniya-tsen-na-tovary-v-internet-magazinah/viewer (дата обращения 4.04.2022)
 	
-	\bibitem{prod_types} https://ucsol.ru/gruzoperevozki/vidy-tipy-tovarov
+	\bibitem{prod_types} Виды товаров (Типы товаров) [Электронный ресурс]. -- Режим доступа:  https://ucsol.ru/gruzoperevozki/vidy-tipy-tovarov (дата обращения 5.04.2022)
 	
 	\bibitem{kogal} Когаловский М.Р. Энциклопедия технологий баз данных. — М.: Финансы и статистика, 2002. — 800 с.
 	
-	\bibitem{scienceforum} https://scienceforum.ru/2016/article/2016019197
+	\bibitem{scienceforum} Классификация систем управления базами данных [Электронный ресурс]. -- Режим доступа: https://scienceforum.ru/2016/article/2016019197 (дата обращения 6.04.2022)
 	
-	\bibitem{dbms} https://lecturesdb.readthedocs.io/databases/dbms.html
+	\bibitem{dbms} Системы управления базами данных [Электронный ресурс]. -- Режим доступа: https://lecturesdb.readthedocs.io/databases/dbms.html (дата обращения 8.04.2022)
 	
-	\bibitem{orc_db} https://www.oracle.com/database/
+	\bibitem{orc_db} Oracle Database [Электронный ресурс]. -- Режим доступа: https://www.oracle.com/database/ (дата обращения 8.04.2022)
 	
-	\bibitem{orc} https://www.oracle.com/
+	\bibitem{orc} Oracle [Электронный ресурс]. -- Режим доступа: https://www.oracle.com/ (дата обращения 8.04.2022)
 	
-	\bibitem{cmp_db} https://drach.pro/blog/hi-tech/item/145-db-comparison
+	\bibitem{cmp_db} Сравнение современных СУБД [Электронный ресурс]. -- Режим доступа:  https://drach.pro/blog/hi-tech/item/145-db-comparison (дата обращения 8.04.2022)
 	
-	\bibitem{mssql} https://www.microsoft.com/ru-ru/sql-server/sql-server-2019
+	\bibitem{mssql} Microsoft SQL-Server  [Электронный ресурс]. -- Режим доступа:  https://www.microsoft.com/ru-ru/sql-server/sql-server-2019 (дата обращения 8.04.2022)
 	
-	\bibitem{pg} https://www.postgresql.org/
+	\bibitem{pg} PostgreSQL [Электронный ресурс]. -- Режим доступа: https://www.postgresql.org/ (дата обращения 8.04.2022)
 	
-	\bibitem{plpgsql} https://www.postgresql.org/docs/9.6/plpgsql.html
+	\bibitem{plpgsql} PL/pgSQL [Электронный ресурс]. -- Режим доступа: https://www.postgresql.org/docs/9.6/plpgsql.html (дата обращения 8.04.2022)
 	
-	\bibitem{plpython3u} https://www.postgresql.org/docs/current/plpython-python23.html
+	\bibitem{plpython3u} PL/Python [Электронный ресурс]. -- Режим доступа: https://www.postgresql.org/docs/current/plpython-python23.html (дата обращения 8.04.2022)
 	
-	\bibitem{db2} https://www.ibm.com/analytics/db2
+	\bibitem{db2} DB2 [Электронный ресурс]. -- Режим доступа: https://www.ibm.com/analytics/db2 (дата обращения 8.04.2022)
 	
-	\bibitem{lt_exel} https://ya-znau.ru/znaniya/zn/202
+	\bibitem{lt_exel} Построение линии тренда в Excel [Электронный ресурс]. -- Режим доступа: https://ya-znau.ru/znaniya/zn/202 (дата обращения 9.04.2022)
 	
 	\bibitem{mnk} Линник Ю. В. Метод наименьших квадратов и основы математико-статистической теории обработки наблюдений. — 2-е изд. — М., 1962. (математическая теория)
 	
-	\bibitem{lin_filt} https://poznayka.org/s23136t1.html
+	\bibitem{lin_filt} Линейная фильтрация [Электронный ресурс]. -- Режим доступа: https://poznayka.org/s23136t1.html (дата обращения 9.04.2022)
 \end{thebibliography}
 	
 \end{document}
