--- a/docs/main.tex
+++ b/docs/main.tex
@@ -89,7 +89,7 @@
 Таким образом, необходимо решить следующие задачи:
 
 \begin{itemize}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item проанализировать варианты представления данных и выбрать из них подходящий для решения задачи;
 	\item проанализировать системы управления базами данных и выбрать подходящую систему для хранения данных;
 	\item проанализировать методы построения линии тренда и выбрать подходящий метод для прогнозирования цен;
@@ -107,7 +107,7 @@
 База данных должна хранить информацию о:
 
 \begin{itemize}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item магазинах;
 	\item товарах
 	\item ассортименте товаров в магазинах;
@@ -151,7 +151,7 @@
 
 Типы товаров \cite{prod_types}:
 \begin{itemize}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item благоустройство;
 	\item бытовая техника, электротехника;
 	\item галантерея;
@@ -223,7 +223,7 @@
 Функции СУБД:
 
 \begin{itemize}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item управление данными во внешней памяти;
 	\item управление данными в оперативной памяти с использованием дискового кэша;
 	\item журнализация изменений, резервное копирование и восстановление базы данных после сбоев;
@@ -237,7 +237,7 @@
 По этому признаку СУБД делят на:
 
 \begin{itemize}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item иерархические;
 	\item сетевые;
 	\item реляционные;
@@ -245,14 +245,15 @@
 	\item объектно-реляционные.
 \end{itemize}
 
-В \textit{иерархических} СУБД используется представление базы данных в виде древовидной (иерархической) структуры, состоящей из объектов (данных) различных уровней.
+\subsubsection*{Иерархические СУБД}
+В иерархических СУБД используется представление базы данных в виде древовидной (иерархической) структуры, состоящей из объектов (данных) различных уровней.
 
 Между объектами существуют связи, каждый объект может включать в себя несколько объектов более низкого уровня. Такие объекты находятся в отношении предка (объект более близкий к корню) к потомку (объект более низкого уровня), при этом возможна ситуация, когда объект-предок не имеет потомков или имеет их несколько, тогда как у объекта-потомка обязательно только один предок. Объекты, имеющие общего предка, называются близнецами.
 
 Примеры: Caché, Google App Engine Datastore API.
 
-""\newline
-\indent\textit{Сетевые} СУБД подобны иерархическим, за исключением того, что в них имеются указатели в обоих направлениях, которые соединяют родственную информацию.
+\subsubsection*{Сетевые СУБД}
+Сетевые СУБД подобны иерархическим, за исключением того, что в них имеются указатели в обоих направлениях, которые соединяют родственную информацию.
 
 Несмотря на то, что эта модель решает некоторые проблемы, связанные с иерархической моделью, выполнение простых запросов остается достаточно сложным процессом.
 
@@ -260,11 +261,11 @@
 
 Примеры: Caché.
 
-""\newline
-\indent\textit{Реляционные} СУБД ориентированы на организацию данных в виде двумерных таблиц. Каждая реляционная таблица представляет собой двумерный массив и обладает следующими свойствами:
+\subsubsection*{Реляционные СУБД}
+Реляционные СУБД ориентированы на организацию данных в виде двумерных таблиц. Каждая реляционная таблица представляет собой двумерный массив и обладает следующими свойствами:
 
 \begin{enumerate}
-	\setlength\itemsep{0.05em}
+	\setlength\itemsep{0.01em}
 	\item каждый элемент таблицы является одним элементом данных;
 	\item каждый столбец обладает своим уникальным именем;
 	\item одинаковые строки в таблице отсутствуют;
@@ -274,22 +275,22 @@
 
 Практически все разработчики современных приложений, предусматривающих связь с системами баз данных, ориентируются на реляционные СУБД. По оценке Gartner в 2013 году рынок реляционных СУБД составлял 26 млрд долларов с годовым приростом около 9\%, а к 2018 году рынок реляционных СУБД достигнет 40 млрд долларов. В настоящее время абсолютными лидерами рынка СУБД являются компании Oracle, IBM и Microsoft, с общей совокупной долей рынка около 90\%, поставляя такие системы как Oracle Database, IBM DB2 и Microsoft SQL Server \cite{dbms}.
 
-""\newline
-\indent\textit{Объектно-ориентированные} СУБД управляют базами данных, в которых данные моделируются в виде объектов, их атрибутов, методов и классов.
+\subsubsection*{Объектно-ориентированные СУБД}
+Объектно-ориентированные СУБД управляют базами данных, в которых данные моделируются в виде объектов, их атрибутов, методов и классов.
 
 Этот вид СУБД позволяет работать с объектами баз данных так же, как с объектами в программировании в объектно-ориентированных языках программирования. ООСУБД расширяет языки программирования, прозрачно вводя долговременные данные, управление параллелизмом, восстановление данных, ассоциированные запросы и другие возможности.
 
 Примеры: GemStone.
 
-""\newline
-\indent\textit{Объектно-реляционные} СУБД поддерживают некоторые технологии, реализующие объектно-ориентированный подход: объекты, классы и наследование реализованы в структуре баз данных и языке запросов.
+\subsubsection*{Объектно-реляционные СУБД}
+Объектно-реляционные СУБД поддерживают некоторые технологии, реализующие объектно-ориентированный подход: объекты, классы и наследование реализованы в структуре баз данных и языке запросов.
 
 Зачастую все те СУБД, которые называются реляционными, являются, по факту, объектно-реляционными \cite{dbms}.
 
+В данной работе будет рассмотрен имено этот класс СУБД.
+
 Примеры: PostgreSQL, DB2, Oracle Database, Microsoft SQL Server.
 
-""\newline\indent
-В данной работе будет рассмотренн имено этот класс СУБД.
 
 \subsection{Обзор объектно-реляционных СУБД}
 
