--- a/docs/main.tex
+++ b/docs/main.tex
@@ -112,7 +112,7 @@
 	\item товарах
 	\item ассортименте товаров в магазинах;
 	\item историю цен на товары в магазинах за последние полтора года;
-	\item покупателях.
+	\item товарные чеки.
 \end{itemize}
 
 \captionsetup[table]{skip=-12pt}
@@ -143,7 +143,7 @@
 			
 			\hline
 			
-			Покупатель & ФИО, дата покупки, информация о месте покупки(магазине), список купленных товаров, итоговая стоимость \\
+			Товарный чек & ФИО, дата покупки, информация о месте покупки(магазине), список купленных товаров, итоговая стоимость \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -205,7 +205,7 @@
 			
 			\hline
 			
-			Администратор & Просмотр, добавление и удаление информации о магазинах, их ассортименте товаров и их истории цен, покупателях. Возможность прогнозирования цены на товар \\
+			Администратор & Просмотр, добавление и удаление информации о магазинах, их ассортименте товаров и их истории цен, товарных чеках. Возможность прогнозирования цены на товар \\
 			
 			\hline
 		\end{tabular}
